Check syntax & semantic and gen cpp code 7